# quick-stock-bolna

./: .dockerignore  .env.example  .gitignore  CLAUDE.md  Dockerfile  README.md  pyproject.toml
app/: main.py
app/db/: connection.py  tickets.py
app/helpers/: config.py  events.py  http_session.py  logger.py  prompt_loader.py  regional.py
app/prompts/: options_summary.txt  product_research.txt  store_caller.txt  transcript_analyzer.txt
app/routes/: bolna_webhook.py  ticket_routes.py
app/services/: bolna_client.py  gemini_client.py  geocoding.py  google_maps.py  options_summary.py  product_research.py  store_caller.py  transcript_analyzer.py  web_deals.py
frontend/: package.json  tsconfig.tsbuildinfo
frontend/src/app/: globals.css  layout.tsx  page.tsx
frontend/src/components/: backend-down-banner.tsx  backend-health-provider.tsx  dashboard.tsx  query-panel.tsx  ticket-detail.tsx  tracking-panel.tsx
frontend/src/lib/: api.ts
