[project]
name = "quickstock"
version = "1.0.0"
description = "AI Voice Store Availability Checker — powered by Bolna"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.104.0",
    "uvicorn[standard]>=0.24.0",
    "python-dotenv>=1.0.0",
    "aiohttp>=3.9.0",
    "openai>=1.30.0",
    "google-genai>=1.0.0",
    "psycopg2-binary>=2.9.0",
]
